--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,6 @@
+@import "./settings";
 @import "./components/Header";
 @import "./components/Banner";
-@import "./settings";
+@import "./components/Card";
+@import "./components/Collapse";
+@import "./components/Footer";
