--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./settings";
+@import "./pages/Error404";
 @import "./components/Header";
 @import "./components/Banner";
 @import "./components/Card";
