--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,10 @@
 @import "./settings";
 @import "./pages/Error404";
+@import "./pages/Lodging";
 @import "./components/Header";
 @import "./components/Banner";
 @import "./components/Card";
 @import "./components/Collapse";
+@import "./components/TagName";
+@import "./components/Slideshow";
 @import "./components/Footer";
